Some ui refactoring, few bugs fixed.

--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -1,113 +1,20 @@
 extend ../common/_master
+include ../utils/notifications
+include utils/search-nav
+include utils/event-view
 
 block main
     link(rel='stylesheet', href='../../public/css/events/browse-events.css', type='text/css')
-    div(class="orange accent-4 card center-align light-green-text text-lighten-4" id="messages-box")
-        !=messages()
+    +notifications()
     form(id='browse-events-form' class="col s6" action='/events/browse' method='PUT')
         div(class="row")
-            div(class="col s12 m3 l3")
-                div(class="row")
-                    div(class="col s12")
-                        div(class="row")
-                            div(class="input-field col s12")
-                                i(class="material-icons prefix")|textsms    
-                                input(name="eventName" type="text" id="eventName" class="autocomplete")
-                                label(for="eventName")
-                                    |Search event by name:
-                div(class="row")
-                    div(class="col s12")
-                        div(class="row")
-                            div(class="input-field col s12")
-                                i(class="material-icons prefix")|location_on    
-                                input(name="eventLocation" type="text" id="eventLocation" class="autocomplete")
-                                label(for="eventLocation")
-                                    |Search event by location:
-                div(class="row")
-                    div(class="col s12")
-                        div(class="row")
-                            div(class="input-field col s12")    
-                                i(class="material-icons prefix")|find_replace
-                                input(name="eventType" type="text" id="eventType" class="autocomplete")
-                                label(for="eventType")
-                                    |Search event by type:
-                div(class="row")
-                    div(class="col s12")
-                        div(class="row")
-                            div(class="input-field col s12")
-                                i(class="material-icons prefix")|date_range                                                        
-                                input(name="eventDate" type="date" class="datepicker")
-                button(type='submit' class='btn deep-orange' id='search-event-btn')
-                    |Search
+            +search-nav
             div(class="col s12 m9 l9" id="events-box")
                 div(class="row")
-                each event, index in context
-                    div(class="col s12 m4 l4 event-view")
-                        div(class="card")
-                            div(class="card-image")
-                            if event.eventImage.encoded
-                                img(src="data:image/png;base64," + event.eventImage.encoded class="event-image col s12")
-                                span(class="card-title")
-                                    |#{event.eventName}
-                            else
-                                img(src="data:image/png;base64," + event.eventImage.default class="event-image col s12")
-                                span(class="card-title")
-                                    |#{event.eventName}
-                            div(class="card-content")
-                                p
-                                    |Author: #{event.author}
-                                p
-                                    |Date: #{event.eventDate}
-                                p
-                                    |Description: #{event.eventDescription}
-                            div(class="card-action")
-                                a(href=event._id data-target=event._id class="modal-trigger")
-                                    |View more
-                    div(id=event._id class="modal modal-fixed-footer")
-                        div(class="modal-content row")
-                            div(class="col s12")
-                            if event.eventImage.encoded
-                                img(src="data:image/png;base64," + event.eventImage.encoded class="event-image")
-                            else
-                                img(src="data:image/png;base64," + event.eventImage.default class="event-image")
-                            div(class="col s6")
-                                h4(class="col s12")
-                                    |#{event.eventName}
-                                p
-                                    |Author: #{event.author}
-                                p
-                                    |Type: #{event.eventType}
-                                p
-                                    |Location: #{event.eventLocation}
-                                p
-                                    |Date: #{event.eventDate}
-                                p
-                                    |Time: #{event.eventTime}
-                                p
-                                    |Description: #{event.eventDescription}
-                        div(class="modal-footer")
-                            div(class="progress")
-                                div(class="indeterminate")
-                            if user
-                                div(class="btn-container hidden")
-                                    button(id="participate-btn" class="modal-action modal-close waves-effect waves-green btn-flat participate-btn")
-                                        |Participate
-                                    button(id="leave-btn" class="modal-action modal-close waves-effect waves-green btn-flat leave-btn hidden")
-                                        |Leave
-                                    a(href=`/events/manage/${event._id}` id="manage-btn" class="modal-action modal-close waves-effect waves-green btn-flat manage-btn hidden")
-                                        |Manage 
-                                    a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
-                                        |Bring me back
-                            else
-                                div(class="btn-container hidden")
-                                    button(id="participate-btn" class="modal-action modal-close waves-effect waves-green btn-flat participate-btn")
-                                        |Participate
-                                    a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
-                                        |Bring me back    
+                    +event-view()       
     script(src="../../public/js/events/datepicker.js")
     script(src="../../public/js/modal.js")
     script(src="../../public/js/events/autocomplete.js")
     script(src="../../public/js/events/view.event.js")
     script(src="../../public/js/events/join.event.js")
     script(src="../../public/js/events/leave.event.js")
-    script(src="../../public/js/notifications/notification.helper.js")
