--- a/views/common/_nav.pug
+++ b/views/common/_nav.pug
@@ -1,26 +1,13 @@
+include utils/nav-links.pug
+
 mixin nav()
     nav(class="nav-wrapper  light-green" id="navbar")
-        a(href="/" class="brand-logo hide-on-med-and-down light-green-text text-lighten-4")
+        a(href="/" class="brand-logo light-green-text hide-on-small-and-down text-lighten-4")
             |Fade
-        ul(ul id="nav-mobile" class="right light-green-text text-lighten-4")
-            li(class="" id="navbar-home")
-                a(href='/')
-                   | Home
-            li(class="" id="navbar-about")   
-                a(href='/about')
-                    | About us
-            if user
-                li(class="" id="navbar-profile")
-                    a(href='/user/profile')
-                        =user.username
-                li(class="" id="navbar-logout")
-                    a(href='/logout')
-                        span(class="" aria-hidden="true")
-                        | Logout
-            else
-                li(class="" id="navbar-profile")                
-                    a(href='/login')
-                        | Login
-            li(class="" id="navbar-chat")
-                a(href='/chat')
-                   | Join chat
+        a(class="dropdown-button hide-on-med-and-up" href="#!" id="dropdown-menu-btn" data-activates="dropdown1")
+            |Menu
+        ul(id="dropdown1" class="dropdown-content")
+            +nav-links()          
+        ul(ul id="nav-mobile" class="right hide-on-small-and-down light-green-text text-lighten-4")
+            +nav-links()
+    script(src="/public/js/dropdown.js")
