--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -1,10 +1,9 @@
 extend ../common/_master
-
+include ../utils/notifications
 
 block main
-    link(rel='stylesheet', href='../../public/css/users/signin.css', type='text/css' )   
-    div(class="orange accent-4 card center-align light-green-text text-lighten-4" id="messages-box")
-            !=messages()
+    link(rel='stylesheet', href='../../public/css/users/signin.css', type='text/css' )
+    +notifications()
     div(class="row")
         form(id="login-form" class="col s12" action='/login' method='POST')
             div(class="row")
