--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -45,14 +45,9 @@ block main
                     div(class="col s12 m4 l4 event-view")
                         div(class="card")
                             div(class="card-image")
-                            if event.eventImage.encoded
-                                img(src="data:image/png;base64," + event.eventImage.encoded class="event-image col s12")
-                                span(class="card-title")
-                                    |#{event.eventName}
-                            else
-                                img(src="data:image/png;base64," + event.eventImage.default class="event-image col s12")
-                                span(class="card-title")
-                                    |#{event.eventName}
+                                img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
+                            span(class="card-title")
+                                |#{event.eventName}
                             div(class="card-content")
                                 p
                                     |Author: #{event.author}
@@ -66,10 +61,7 @@ block main
                     div(id=event._id class="modal modal-fixed-footer")
                         div(class="modal-content row")
                             div(class="col s12")
-                            if event.eventImage.encoded
-                                img(src="data:image/png;base64," + event.eventImage.encoded class="event-image")
-                            else
-                                img(src="data:image/png;base64," + event.eventImage.default class="event-image")
+                                img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
                             div(class="col s6")
                                 h4(class="col s12")
                                     |#{event.eventName}
@@ -100,7 +92,9 @@ block main
                                         |Bring me back
                             else
                                 div(class="btn-container hidden")
-                                    button(id="participate-btn" class="modal-action modal-close waves-effect waves-green btn-flat participate-btn")
+                                    a(href="/login")
+                                        | You need to be logged in to participate 
+                                    a(disabled id="participate-btn" class="modal-action modal-close waves-effect waves-green btn-flat participate-btn")
                                         |Participate
                                     a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
                                         |Bring me back    
