--- a/views/users/my-events.pug
+++ b/views/users/my-events.pug
@@ -11,12 +11,9 @@ block main
                     div(class="col s12 m5 l5 event-view")
                         div(class="card")
                             div(class="card-image")
-                            if event.eventImage.encoded
-                                img(src="data:image/png;base64," + event.eventImage.encoded class="event-image")
-                            else
-                                img(src="data:image/png;base64," + event.eventImage.default class="event-image")
-                                span(class="card-title")
-                                    |#{event.eventName}
+                                img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
+                            span(class="card-title")
+                                |#{event.eventName}
                             div(class="card-content")
                                 p
                                     |Author: #{event.author}
