--- a/views/users/my-events.pug
+++ b/views/users/my-events.pug
@@ -27,10 +27,8 @@ block main
                     div(id=event._id class="modal modal-fixed-footer")
                         div(class="modal-content row")
                             div(class="col s12")
-                            if event.eventImage.encoded
-                                img(src="data:image/png;base64," + event.eventImage.encoded class="event-image")
-                            else
-                                img(src="data:image/png;base64," + event.eventImage.default class="event-image")
+                                div(class="card-image")
+                                    img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
                             div(class="col s6")
                                 h4(class="col s12")
                                     |#{event.eventName}
