--- a/public/css/users/register.css
+++ b/public/css/users/register.css
@@ -1,8 +1,3 @@
-#register-form {
-    margin-top: 5%;
-    margin-left: 35%;
-}
-
 #register-btn {
     margin-left: 28%;
 }
@@ -11,3 +6,23 @@
      width: 20%;
      margin-left: 38%;
  }
+@media screen and (min-width: 700px) {
+    #register-form {
+        margin-left: 25%;
+    }
+}
+@media screen and (min-width: 600px) and (max-width: 700px) {
+    #register-form {
+        margin-left: 23%;
+    }
+}
+@media screen and (min-width: 350px) and (max-width: 600px) {
+    #register-form {
+        margin-left: 18%;
+    }
+}
+@media screen and (max-width: 350px) {
+    #register-form {
+        margin-left: 20%;
+    }
+}
