--- a/views/events/create-event.pug
+++ b/views/events/create-event.pug
@@ -6,39 +6,39 @@ block main
         !=messages()
     div(class="row")
         form(id='create-event-form' class="col s6" action='/events/create' method='POST' enctype="multipart/form-data")
-            div(class="input-field col s6")
+            div(class="input-field col s12 m6")
                 input(name="eventName" id="eventName" type="text" class="validate")
                 label(for="eventName")
                     |Event name:
-            div(class="input-field col s6")
+            div(class="input-field col s12 m6")
                 input(name="eventLocation" id="eventLocation" type="text" class="validate")
                 label(for="eventLocation")
                     |Event location:  
-            div(class="input-field col s6")
+            div(class="input-field col s12 m6")
                 input(name="eventType" id="eventType" type="text" class="validate")
                 label(for="eventType")
                     |Event type:                 
-            div(class="input-field col s6")
+            div(class="input-field col s12 m6")
                 input(name="eventDescription" id="eventDescription" type="text" class="validate")
                 label(for="eventDescription")
                     |Event description:
             div(class="row")
-                div(class="col s6")
+                div(class="col s12 m6")
                     div(class="row")
-                        div(class="input-field col s6")
+                        div(class="input-field col s12 m6")
                             i(class="material-icons prefix")|date_range                                                        
                             input(name="eventDate" type="date" id="datepicker" class="datepicker")
                             label(for="datepicker")
                                 |Pick date:
-                div(class="col s6")
+                div(class="col s12 m6")
                     div(class="row")
-                        div(class="input-field col s6")
+                        div(class="input-field col s12 m6")
                             i(class="material-icons prefix")|access_time                                                        
                             input(name="eventTime" type="date" id="eventTime" class="timepicker")
                             label(for="eventTime")
                                 |Pick hours:
             div(class="row")            
-                div(class="col s4 file-field input-field")
+                div(class="col s12 m6 file-field input-field")
                     div(class="btn deep-orange")
                         span
                             |Image
