--- a/views/navigation/about.pug
+++ b/views/navigation/about.pug
@@ -7,14 +7,12 @@ block main
             img(src="/public/imgs/about/img1.jpg")
         a(class="carousel-item modal-trigger" href="#modal2")
             img(src="/public/imgs/about/img1.jpg")
-        a(class="carousel-item modal-trigger" href="#modal3")
-            img(src="/public/imgs/about/img1.jpg")
     div(id="modal1" class="modal modal-fixed-footer")
         div(class="modal-content row")
-            div(class="col s12 m12 l6")
+            div(class="col s12 m6 l6")
                 img(src="/public/imgs/about/img1.jpg" class="modal-image")
-            div(class="col s12 m12 l6")
-                h4(class="col s12")
+            div(class="col s12 m6 l6")
+                h4(class="col s12 m6 l6")
                     |Vlado Vlaev
                 p
                     |Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -27,10 +25,10 @@ block main
                 |Bring me back   
     div(id="modal2" class="modal modal-fixed-footer")
         div(class="modal-content row")
-            div(class="col s6")
+            div(class="col s12 m6 l6")
                 img(src="/public/imgs/about/img1.jpg" class="modal-image")
-            div(class="col s6")
-                h4(class="col s12")
+            div(class="col s12 m6 l6")
+                h4(class="col s12 m6 l6")
                     |Vlado Vlaev
                 p
                     |Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -40,22 +38,6 @@ block main
                     |It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
         div(class="modal-footer")
             a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat ")
-                |Bring me back   
-    div(id="modal3" class="modal modal-fixed-footer")
-        div(class="modal-content row")
-            div(class="col s6")
-                img(src="/public/imgs/about/img1.jpg" class="modal-image")
-            div(class="col s6")
-                h4(class="col s12")
-                    |Vlado Vlaev
-                p
-                    |Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    |Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    |when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                    |It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                    |It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        div(class="modal-footer")
-            a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat ")
-                |Bring me back   
+                |Bring me back
     script(src="../../public/js/carousel.js")
     script(src="../../public/js/modal.js")    
