disband event logic added

--- a/views/users/my-events.pug
+++ b/views/users/my-events.pug
@@ -2,106 +2,108 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/users/my-events.css', type='text/css' )
-    div(class="row")
-        div(class="col s12 m6 l6")
-            h4
-                |Events organized by you:
-            if createdEvents
-                each event, index in createdEvents
-                    div(class="col s12 m5 l5 event-view")
-                        div(class="card")
-                            div(class="card-image")
-                                img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
-                            span(class="card-title")
-                                |#{event.eventName}
-                            div(class="card-content")
-                                p
-                                    |Author: #{event.author}
-                                p
-                                    |Date: #{event.eventDate}
-                                p
-                                    |Description: #{event.eventDescription}
-                            div(class="card-action")
-                                a(href=event._id data-target=event._id class="modal-trigger")
-                                    |View more
-                    div(id=event._id class="modal modal-fixed-footer")
-                        div(class="modal-content row")
-                            div(class="col s12")
+    form(id='manage-events-form' class="col s6" action='/user/profile/my-events')
+        div(class="row")
+            div(class="col s12 m6 l6")
+                h4
+                    |Events organized by you:
+                if createdEvents
+                    each event, index in createdEvents
+                        div(class="col s12 m5 l5 event-view")
+                            div(class="card")
                                 div(class="card-image")
                                     img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
-                            div(class="col s6")
-                                h4(class="col s12")
+                                span(class="card-title")
                                     |#{event.eventName}
-                                p
-                                    |Author: #{event.author}
-                                p
-                                    |Type: #{event.eventType}
-                                p
-                                    |Location: #{event.eventLocation}
-                                p
-                                    |Date: #{event.eventDate}
-                                p
-                                    |Time: #{event.eventTime}
-                                p
-                                    |Description: #{event.eventDescription}
-                        div(class="modal-footer")
-                            div(class="progress")
-                                div(class="indeterminate")
-                            div(class="btn-container hidden")
-                                    button(id="disband-btn" class="modal-action modal-close waves-effect waves-green btn-flat leave-btn hidden")
-                                        |Disband
-                                    a(href=`/events/manage/${event._id}` id="manage-btn" class="modal-action modal-close waves-effect waves-green btn-flat manage-btn hidden")
-                                        |Manage 
-                                    a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
-                                        |Bring me back                             
-        div(class="col s12 m6 l6")
-            h4
-                |Events you participate in:
-            if joinedEvents
-                each event, index in joinedEvents
-                    div(class="col s12 m5 l5 event-view")
-                        div(class="card")
-                            div(class="card-image")
-                                img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
-                            span(class="card-title")
-                                |#{event.eventName}
-                            div(class="card-content")
-                                p
-                                    |Author: #{event.author}
-                                p
-                                    |Date: #{event.eventDate}
-                                p
-                                    |Description: #{event.eventDescription}
-                            div(class="card-action")
-                                a(href=event._id data-target=event._id class="modal-trigger")
-                                    |View more
-                    div(id=event._id class="modal modal-fixed-footer")
-                        div(class="modal-content row")
-                            div(class="card-image")
-                                img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
-                            div(class="col s6")
-                                h4(class="col s12")
+                                div(class="card-content")
+                                    p
+                                        |Author: #{event.author}
+                                    p
+                                        |Date: #{event.eventDate}
+                                    p
+                                        |Description: #{event.eventDescription}
+                                div(class="card-action")
+                                    a(href=event._id data-target=event._id class="modal-trigger")
+                                        |View more
+                        div(id=event._id class="modal modal-fixed-footer")
+                            div(class="modal-content row")
+                                div(class="col s12")
+                                    div(class="card-image")
+                                        img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
+                                div(class="col s6")
+                                    h4(class="col s12")
+                                        |#{event.eventName}
+                                    p
+                                        |Author: #{event.author}
+                                    p
+                                        |Type: #{event.eventType}
+                                    p
+                                        |Location: #{event.eventLocation}
+                                    p
+                                        |Date: #{event.eventDate}
+                                    p
+                                        |Time: #{event.eventTime}
+                                    p
+                                        |Description: #{event.eventDescription}
+                            div(class="modal-footer")
+                                div(class="progress")
+                                    div(class="indeterminate")
+                                div(class="btn-container hidden")
+                                        button(id="disband-btn" class="modal-action modal-close waves-effect waves-green btn-flat disband-btn hidden")
+                                            |Disband
+                                        a(href=`/events/manage/${event._id}` id="manage-btn" class="modal-action modal-close waves-effect waves-green btn-flat manage-btn hidden")
+                                            |Manage 
+                                        a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
+                                            |Bring me back                             
+            div(class="col s12 m6 l6")
+                h4
+                    |Events you participate in:
+                if joinedEvents
+                    each event, index in joinedEvents
+                        div(class="col s12 m5 l5 event-view")
+                            div(class="card")
+                                div(class="card-image")
+                                    img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
+                                span(class="card-title")
                                     |#{event.eventName}
-                                p
-                                    |Author: #{event.author}
-                                p
-                                    |Type: #{event.eventType}
-                                p
-                                    |Location: #{event.eventLocation}
-                                p
-                                    |Date: #{event.eventDate}
-                                p
-                                    |Time: #{event.eventTime}
-                                p
-                                    |Description: #{event.eventDescription}
-                        div(class="modal-footer")
-                            div(class="progress")
-                                div(class="indeterminate")
-                            div(class="btn-container hidden")
-                                    button(id="leave-btn" class="modal-action modal-close waves-effect waves-green btn-flat leave-btn hidden")
-                                        |Leave 
-                                    a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
-                                        |Bring me back
+                                div(class="card-content")
+                                    p
+                                        |Author: #{event.author}
+                                    p
+                                        |Date: #{event.eventDate}
+                                    p
+                                        |Description: #{event.eventDescription}
+                                div(class="card-action")
+                                    a(href=event._id data-target=event._id class="modal-trigger")
+                                        |View more
+                        div(id=event._id class="modal modal-fixed-footer")
+                            div(class="modal-content row")
+                                div(class="card-image")
+                                    img(src="data:image/png;base64," + event.eventImage.data class="event-image col s12")
+                                div(class="col s6")
+                                    h4(class="col s12")
+                                        |#{event.eventName}
+                                    p
+                                        |Author: #{event.author}
+                                    p
+                                        |Type: #{event.eventType}
+                                    p
+                                        |Location: #{event.eventLocation}
+                                    p
+                                        |Date: #{event.eventDate}
+                                    p
+                                        |Time: #{event.eventTime}
+                                    p
+                                        |Description: #{event.eventDescription}
+                            div(class="modal-footer")
+                                div(class="progress")
+                                    div(class="indeterminate")
+                                div(class="btn-container hidden")
+                                        button(id="leave-btn" class="modal-action modal-close waves-effect waves-green btn-flat leave-btn hidden")
+                                            |Leave 
+                                        a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
+                                            |Bring me back
     script(src="../../public/js/modal.js")
     script(src="../../public/js/events/view.event.js")
     script(src="../../public/js/events/leave.event.js")
+    script(src="../../public/js/events/delete.event.js")
