--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -8,16 +8,10 @@ block main
         p(class="center-align grey-text text-darken-4")
             | Check out our top rated events:
     div(class="carousel" id="home-top-events")
-        a(class="carousel-item" href="#one!")
-            img(src="https://lorempixel.com/250/250/nature/1")
-        a(class="carousel-item" href="#two!")
-            img(src="https://lorempixel.com/250/250/nature/2")
-        a(class="carousel-item" href="#three!")
-            img(src="https://lorempixel.com/250/250/nature/3")
-        a(class="carousel-item" href="#four!")
-            img(src="https://lorempixel.com/250/250/nature/4")
-        a(class="carousel-item" href="#five!")
-            img(src="https://lorempixel.com/250/250/nature/5")   
+        each event, index in context
+            a(class="carousel-item" href="#{index}!")
+                img(src="data:image/png;base64," + event.eventImage.data)
+                | Participants : #{event.participantsCount}
     div(class="row center-align" id="home-buttons") 
         a(class="btn deep-orange col s12 m4 l2" href="/events/browse" id="browse-events-btn")
             |Browse More
