Fixed consistency issue with login

--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -16,6 +16,6 @@ block main
         a(class="btn deep-orange col s12 m4 l2" href="/events/browse" id="browse-events-btn")
             |Browse More
         unless user   
-            a(class="btn deep-orange col s12 m4 l2" href="/login" id="sign-in-btn")
-                |Sign In
+            a(class="btn deep-orange col s12 m4 l2" href="/login" id="login-btn")
+                |Login
     script(src="../../public/js/carousel.js")
