--- a/views/navigation/about.pug
+++ b/views/navigation/about.pug
@@ -4,22 +4,22 @@ block main
     link(rel='stylesheet', href='../../public/css/about.css', type='text/css' )
     div(class="carousel" id="home-top-events")
         a(class="carousel-item modal-trigger" href="#modal1")
-            img(src="/public/imgs/about/img1.jpg")
+            img(src="https://scontent.fsof3-1.fna.fbcdn.net/v/t1.0-9/12049472_857985500922974_5855778250099170357_n.jpg?oh=df4f2d3bdb0540f6ebfa1fda6ab8809f&oe=59ED7E78")
         a(class="carousel-item modal-trigger" href="#modal2")
             img(src="/public/imgs/about/img1.jpg")
     div(id="modal1" class="modal modal-fixed-footer")
         div(class="modal-content row")
             div(class="col s12 m6 l6")
-                img(src="/public/imgs/about/img1.jpg" class="modal-image")
+                img(src="https://scontent.fsof3-1.fna.fbcdn.net/v/t1.0-9/12049472_857985500922974_5855778250099170357_n.jpg?oh=df4f2d3bdb0540f6ebfa1fda6ab8809f&oe=59ED7E78" class="modal-image")
             div(class="col s12 m6 l6")
                 h4(class="col s12 m6 l6")
-                    |Vlado Vlaev
-                p
-                    |Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    |Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    |when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                    |It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                    |It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                    |Samuil Mihaylov
+                p(class="col s12 m6 l6")
+                    |Connect with me :
+                a(href="https://github.com/samuilmihaylov" class="col s12 m6 l6")
+                    |Github
+                a(href="https://www.facebook.com/samuil.mihailov.1" class="col s12 m6 l6")
+                    |Facebook
         div(class="modal-footer")
             a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat ")
                 |Bring me back   
@@ -30,12 +30,12 @@ block main
             div(class="col s12 m6 l6")
                 h4(class="col s12 m6 l6")
                     |Vlado Vlaev
-                p
-                    |Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    |Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    |when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                    |It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                    |It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                p(class="col s12 m6 l6")
+                    |Connect with me :
+                a(href="https://github.com/vlaevv" class="col s12 m6 l6")
+                    |Github
+                a(href="https://twitter.com/@Vlaev_V" class="col s12 m6 l6")
+                    |Twitter
         div(class="modal-footer")
             a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat ")
                 |Bring me back
