browser browse events tests added

--- a/views/events/utils/search-nav.pug
+++ b/views/events/utils/search-nav.pug
@@ -29,6 +29,6 @@ mixin search-nav()
                 div(class="row")
                     div(class="input-field col s12")
                         i(class="material-icons prefix")|date_range                                                        
-                        input(name="eventDate" type="date" class="datepicker")
+                        input(name="eventDate" id="eventDate" type="date" class="datepicker")
         button(type='submit' class='btn deep-orange' id='search-event-btn')
             |Search
