--- a/views/navigation/about.pug
+++ b/views/navigation/about.pug
@@ -21,7 +21,7 @@ block main
                 a(href="https://www.facebook.com/samuil.mihailov.1" class="col s12 m6 l6")
                     |Facebook
         div(class="modal-footer")
-            a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat ")
+            a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ")
                 |Bring me back   
     div(id="modal2" class="modal modal-fixed-footer")
         div(class="modal-content row")
@@ -37,7 +37,7 @@ block main
                 a(href="https://twitter.com/@Vlaev_V" class="col s12 m6 l6")
                     |Twitter
         div(class="modal-footer")
-            a(href="/about" class="modal-action modal-close waves-effect waves-green btn-flat ")
+            a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ")
                 |Bring me back
     script(src="../../public/js/carousel.js")
     script(src="../../public/js/modal.js")    
